Fixing color (again)

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-#firstname{background-color: yellow};
+#firstname{background-color: yellow;}
 
 
 
