--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,9 @@
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-#firstname{background-color: yellow;}
+#firstname {
+    background-color: yellow;
+    }
 
 
 
