--- a/css/main.css
+++ b/css/main.css
@@ -3,12 +3,11 @@
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-#firstname {
-    background-color: yellow;
-    }
 
 
-
+html {
+    color: blue;
+}
 
 
 
