--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,13 @@
+.jumbotron
+{
+    background:
+    background-color:
+    color:
+   
+}
+
+
+
 
 
 /* ==========================================================================
@@ -5,7 +15,7 @@
    ========================================================================== */
 
 
-html {
+h1 {
     color: blue;
 }
 
