--- a/css/main.css
+++ b/css/main.css
@@ -15,8 +15,8 @@
    ========================================================================== */
 
 
-h1 {
-    color: blue;
+h2 {
+    color: green;
 }
 
 
