--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,6 @@
-
+h2 {
+    color: green
+}
 
 
 
@@ -9,9 +11,7 @@
    ========================================================================== */
 
 
-h2 {
-    color: green;
-}
+
 
 
 
