--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,6 @@
 p {
-    font-style : italic;
+    color: limegreen;
 }
-
 
 
 /* ==========================================================================
