--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,13 @@ p {
     color: limegreen;
 }
 
+h1 {
+    color: saddlebrown;
+}
+
+h2 {
+    color: deepskyblue;
+}
 
 /* ==========================================================================
    Author's custom styles
