--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,9 @@ h2 {
     color: deepskyblue;
 }
 
+p {
+    color: limegreen;
+}
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
