--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,6 @@
-
+p {
+    color: lime;
+}
 
 h1 {
     color: saddlebrown;
@@ -8,9 +10,6 @@ h2 {
     color: deepskyblue;
 }
 
-p {
-    color: limegreen;
-}
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
