--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+h2 {
+    color: deepskyblue
+}
+
 p {
     color: lime;
 }
@@ -6,9 +10,6 @@ h1 {
     color: saddlebrown;
 }
 
-h2 {
-    color: deepskyblue;
-}
 
 /* ==========================================================================
    Author's custom styles
