--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 h2 {
-    color: deepskyblue
+    color: saddlebrown;
 }
 
 p {
@@ -7,7 +7,7 @@ p {
 }
 
 h1 {
-    color: saddlebrown;
+    color: deepskyblue;
 }
 
 
