--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,9 @@ h1 {
     color: deepskyblue;
 }
 
+h2 {
+    color: lime;
+}
 
 /* ==========================================================================
    Author's custom styles
