--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,9 @@ h2 {
     color: lime;
 }
 
+p {
+    style-font: italics
+}
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
