--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,10 @@ h1 {
 p {
     color: deepskyblue;
 }
+
+li {
+    color: darkblue
+}
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
