--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,15 @@
 {
     background: url(../img/recycle-inside-banner.jpg);
 }
+
+h1 {
+    color: saddlebrown
+}
+
+h2 {
+    color: deepskyblue
+}
+
+p {
+    color: lime
+}
